--- a/Projects/02 Blog for schools and students/blog/templates/blog/base.html
+++ b/Projects/02 Blog for schools and students/blog/templates/blog/base.html
@@ -40,7 +40,7 @@
 
   <footer>
     <div class="container text-white">
-      Powerd by Django Framework
+      Powered by Django Framework
     </div>
   </footer>
 
